# leekoonwen.com

./: .gitignore  .ocamlformat  Makefile  README.md  TODO.md  dune  dune-project  package-lock.json  tailwind.config.js  website.opam
config/: config.ml  dune
lib/: dune  gen.ml  header.ml  logger.ml  main.ml  projects.ml  routes.ml  timeline.ml  view.ml
lib/pages/: about.ml  contact.ml  cv.ml  email.ml  pagetypes.ml  projects.ml  template.ml
lib/pages/about/: about.ml  dune
lib/pages/contact/: contact.ml  dune  email.ml
lib/pages/cv/: cv.ml  dune
lib/pages/projects/: dune  projects.ml  symbols.ml
lib/pages/shared/: dune  template.ml
src/: dune  main.ml
src/frontend/: dune  templates.eml.html
src/frontend/components/: experience.eml.html  footer.eml.html  header.eml.html  placeholder.eml.html  profile.eml.html  project.eml.html  timeline.eml.html
static/: styles.css
test/: dune
