(library
 (name lib)
 (public_name website.lib)
 (libraries
  opium
  core
  letters
  website.pages.about
  website.pages.contact
  website.pages.cv
  website.pages.projects
  website.shared))

; (wrapped false))

; (include_subdirs unqualified)

; (env
;  (dev
;   (flags
;    (:standard -w -16))))
